CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 

FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})
SET(CMAKE_VERBOSE_MAKEFILE ON)

INCLUDE_DIRECTORIES(
  $ENV{HDF5_DIR}/include
  )

ADD_LIBRARY(myhdf SHARED IMPORTED)
SET_TARGET_PROPERTIES(myhdf PROPERTIES
    IMPORTED_LOCATION $ENV{HDF5_DIR}/lib/libhdf5.so )

#INCLUDE_DIRECTORIES( $ENV{ParaView_INCLUDE_DIR}/vtkhdf5)
ADD_DEFINITIONS(
    -D_LARGEFILE_SOURCE
    -D_LARGEFILE64_SOURCE
    -fPIC
    -Wno-old-style-cast
)
#-DWM_$ENV{WM_PRECISION_OPTION}
#-DWM_LABEL_SIZE=$ENV{WM_LABEL_SIZE}

ADD_PARAVIEW_PLUGIN(H5FoamReader "1.0"
   SERVER_MANAGER_XML H5FoamReader.xml
   SERVER_MANAGER_SOURCES vtkH5FoamReader.cxx 
   REQUIRED_ON_SERVER)

TARGET_LINK_LIBRARIES(
    H5FoamReader
    myhdf
    ${VTK_LIBRARIES}
)
#2do: Replace VTK_LIBRARIES with only needed ones
#MESSAGE(STATUS "VTK LIBS: ${VTK_LIBRARIES}")
#TARGET_LINK_LIBRARIES(
#    H5FoamReader
#    hdf5
#    ${VTK_LIBRARIES}
#)
